--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,7 +2,7 @@ unbind C-b
 set -g prefix C-a
 set -g mouse on
 set -g default-terminal "screen-256color"
-bind C-e new -n 'tmux.conf' "zsh -c '\${EDITOR:-vim} ~/.config/tmux/tmux.conf && tmux source ~/.config/tmux/tmux.conf && tmux display \"Config reloaded\"'"
+bind C-e new -n 'tmux.conf' "fish -c '\${EDITOR:-vim} ~/.config/tmux/tmux.conf && tmux source ~/.config/tmux/tmux.conf && tmux display \"Config reloaded\"'"
 color_orange="colour166" # 208, 166
 color_purple="colour134" # 135, 134
 color_green="colour076" # 070
@@ -11,6 +11,9 @@ color_yellow="colour220"
 color_red="colour160"
 color_black="colour232"
 color_white="white" # 015
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin "arcticicestudio/nord-tmux"
 
 # This is a theme CONTRACT, you are required to define variables below
 # Change values, but not remove/rename variables itself
@@ -43,3 +46,5 @@ wg_is_zoomed="#[fg=$color_dark,bg=$color_secondary]#{?window_zoomed_flag,[Z],}#[
 wg_is_keys_off="#[fg=$color_light,bg=$color_window_off_indicator]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
 set -g status-left "$wg_session"
 set -g status-right "#[bg=$color_dark]#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed $wg_user_host $wg_date"
+
+run '~/.tmux/plugins/tpm/tpm'
