--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -62,7 +62,7 @@ font-3 = Font Awesome 6 Free Solid:style=Solid:size=10;2
 font-4 = Font Awesome 6 Free Regular:style=Regular:size=10;2
 
 modules-left = bspwm
-modules-center = mpd
+modules-center = cmus
 modules-right = date pipewire-simple battery xkeyboard dunst
 
 cursor-click = pointer
@@ -209,6 +209,25 @@ format-foreground = ${colors.primary}
 
 hook-0 = echo "%{A1:dunstctl set-paused true && polybar-msg hook dunst 2:}%{A}" &
 hook-1 = echo "%{A1:dunstctl set-paused false && polybar-msg hook dunst 1:}%{A}" &
+
+[module/cmus]
+type = custom/script
+
+exec = ~/.config/polybar/scripts/cmus.sh
+exec-if = pgrep -x cmus
+interval = 1
+
+click-left = cmus-remote --next
+click-right = cmus-remote --prev
+click-middle = cmus-remote --pause
+scroll-up = cmus-remote --volume +5%
+scroll-down = cmus-remote --volume -5%
+
+label-font = 3
+format = <label>
+format-underline = ${colors.foreground-alt}
+label = %output%
+label-maxlen = 50
 
 [settings]
 screenchange-reload = true
