--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,10 +1,12 @@
 monitor=,preferred,auto,1
+exec-once=$HOME/.config/hypr/autostart
+exec-once=hyprctl setcursor Vimix-cursors 24
 
 input {
-    kb_layout = us
+    kb_layout = us,ru
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = grp:caps_toggle
     kb_rules =
 
     follow_mouse = 1
@@ -94,6 +96,7 @@ bind = SUPERSHIFT, E, exit,
 bind = SUPERSHIFT, R, exec, hyprctl, reload, 
 bind = SUPERSHIFT, space, togglefloating, 
 bind = SUPER, D, exec, rofi -show run
+bind = SUPER, X, exec, swaylock -e --image .walp/pixelmoon.png
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
@@ -134,3 +137,5 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# windowrule=rounding 10, rofi
