--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -19,6 +19,21 @@ settings:
     global: webengine
   changelog_after_upgrade:
     global: minor
+  colors.completion.category.border.top:
+    global: black
+  colors.completion.category.fg:
+    global: white
+  colors.completion.even.bg:
+    global: '#333333'
+  colors.completion.fg:
+    global:
+    - white
+    - white
+    - white
+  colors.completion.item.selected.border.top:
+    global: '#bbbb00'
+  colors.completion.scrollbar.fg:
+    global: white
   colors.downloads.bar.bg:
     global: black
   colors.downloads.error.bg:
@@ -35,12 +50,18 @@ settings:
     global: darkblue
   colors.statusbar.progress.bg:
     global: white
+  colors.tabs.even.fg:
+    global: white
   colors.webpage.bg:
     global: null
+  colors.webpage.darkmode.algorithm:
+    global: brightness-rgb
   colors.webpage.darkmode.enabled:
     global: true
   colors.webpage.darkmode.grayscale.all:
     global: false
+  colors.webpage.darkmode.threshold.background:
+    global: 0
   colors.webpage.preferred_color_scheme:
     global: dark
   content.blocking.hosts.lists:
@@ -68,14 +89,16 @@ settings:
     global: 8
   qt.force_platform:
     global: null
+  tabs.wrap:
+    global: true
   url.default_page:
-    global: https://serx.ml/
+    global: http://localhost:8080/
   url.incdec_segments:
     global:
     - path
     - query
   url.searchengines:
     global:
-      DEFAULT: https://serx.ml/search?q={}
+      DEFAULT: http://localhost:8080/search?q={}
   url.start_pages:
-    global: https://serx.ml/
+    global: http://localhost:8080/
