--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,65 +1,78 @@
 {
-//СЛОЙ НА КОТОРОМ БУДЕН НАХОДИТСЯ WAYBAR. ПО ДЕФОЛТУ НА САМОМ ВЕРХНЕМ:
     "layer": "top",
-
-//ПОЛОЖЕНИЕ ПАНЕЛИ НА ЭКРАНЕ TOP, BOTTOM, LEFT, RIGHT:
     "position": "top",
-
-//ВЫСОТА ПАНЕЛИ:
-    "height": 25,
-
-//ШИРИНА ПАНЕЛИ:
-    // "width": 1280,
-
-//МОДУЛИ СЛЕВА, ПО ЦЕНТРУ, СПРАВА:
-    "modules-left": [
-"hyprland/workspaces",
-    ],
-
-    "modules-center": [
-"custom/cmus",
-    ],
-
-    "modules-right": [
-"cpu",
-"memory",
-"tray",
-"pulseaudio",
-"custom/lang",
-"river/language",
-"clock"
-    ],
-
-//НАСТРОЙКА МОДУЛЯ ВОРКСПЕЙСОВ:
-      "river/workspaces": {
-	//ПРОКРУТКА КОЛЕСОМ МЫШИ:
-          "disable-scroll": false,
-	//КАКАЯ ТО ХРЕНЬ ДЛЯ НЕСКОЛЬКИХ ПАНЕЛЕЙ:
-          "all-outputs": true,
-	//ЧТО БУДЕТ ОТОБРАЖАТЬСЯ В НАЗАВАНИИ, ИКОНКА КАК НИЖЕ ИЛИ ИМЯ {name}:
-          "format": "{icon}", 
-	//СОБСТВЕННО НАСТРОЙКИ ИКОНОК ДЛЯ ВОРКСПЕЙСОВ:
-          "format-icons": {
-              "1": "",
-              "2": "",
-              "3": "",
-              "4": "",
-              "5": "",
-             "urgent": "",
-              "focused": "",
-               "default": ""
-          }
-      },
+    "spacing": 5, // Gaps between modules (4px)
+    // Choose the order of the modules
+    // "margin-left":25,
+    // "margin-right":25,
+    "margin-bottom":-11,
+    //"margin-top":5,
+    "modules-left": ["wlr/workspaces"],
+    "modules-right": ["temperature","network","battery","custom/ss","custom/cycle_wall","custom/expand","cpu","clock"],
+    "modules-center": ["custom/dynamic_pill"],
+    // Modules configuration
 
 
-//НАСТРОЙКА ПОВЕДЕНИЯ КНОПОК ПЕРЕКЛЮЧЕНИЯ ВОРКСПЕЙСОМ, ТРОГАТЬ ТОЛЬКО ЕСЛИ ДОФИГА УМНЫЙ:
-    "river/mode": {
+    // custom modules ////////////////
+    "custom/dynamic_pill": {
+        "return-type": "json",
+        // "format":"{}",
+        "exec": "~/.config/waybar/scripts/tools/start_dyn",
+        "escape":true
+    },
+    "custom/ss":{
+        "format":"{}",
+        "exec":"~/.config/waybar/scripts/tools/expand ss-icon",
+        "on-click": "~/.config/waybar/scripts/screenshot"
+    },
+    "custom/cycle_wall":{
+        "format":"{}",
+        "exec": "~/.config/waybar/scripts/tools/expand wall",
+        // "interval": 1,
+        "on-click": "~/.config/waybar/scripts/tools/expand cycle"
+    },
+    "custom/expand":{
+        "on-click":"~/.config/waybar/scripts/expand_toolbar",
+        "format":"{}",
+        "exec":"~/.config/waybar/scripts/tools/expand arrow-icon"
+    },
+    // "custom/waybar-mpris": {
+    //     "return-type": "json",
+    //     "exec": "echo '   '",
+    //     "on-click": "waybar-mpris --send toggle",
+    //     // This option will switch between players on right click.
+    //         "on-click-right": "waybar-mpris --send player-next",
+    //     // The options below will switch the selected player on scroll
+    //         // "on-scroll-up": "waybar-mpris --send player-next",
+    //         // "on-scroll-down": "waybar-mpris --send player-prev",
+    //     // The options below will go to next/previous track on scroll
+    //         // "on-scroll-up": "waybar-mpris --send next",
+    //         // "on-scroll-down": "waybar-mpris --send prev",
+    //     "escape": true
+    // },
+    //////////////////////////////////
+    "keyboard-state": {
+        "numlock": true,
+        "capslock": true,
+        "format": "{name} {icon}",
+        "format-icons": {
+            "locked": "",
+            "unlocked": ""
+        }
+    },
+    "wlr/workspaces": {
+        "format": "{icon}",
+        "format-active": " {icon} ",
+        "on-click": "activate",
+        "format-icons":{
+            "10":"10"
+        },
+    },
+    "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
     },
-
-//ОТОБРАЖЕНИЕ МОДУЛЯ MPD, ФОРМАТЫ И ИКОНКИ, ДУМАЮ САМ ДОГАДАЕШЬСЯ ЧТО ЕСТЬ ЧТО, Я ВОТ НЕ ОСИЛИЛ И ПОЛЬЗУЮСЬ CMUS:
     "mpd": {
-        "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ ",
+        "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
         "format-disconnected": "Disconnected ",
         "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
         "unknown-tag": "N/A",
@@ -84,8 +97,6 @@
         "tooltip-format": "MPD (connected)",
         "tooltip-format-disconnected": "MPD (disconnected)"
     },
-
-//Я ТАК ПОНЯЛ ЧТО ЭТА ХРЕНЬ ДЛЯ БЛОКИРОВКИ МОНИТОРА:
     "idle_inhibitor": {
         "format": "{icon}",
         "format-icons": {
@@ -93,106 +104,70 @@
             "deactivated": ""
         }
     },
-
-
-//ТРЕЙ, РАЗМЕР ИКОНОК И РАСТОЯНИЕ МЕЖДУ НИМИ:
     "tray": {
         // "icon-size": 21,
         "spacing": 10
     },
-
-
-//ЧАСЫ, ВРЕМЕННАЯ ЗОНА, ФОРМАТ ОТОБРАЖЕНИЯ И ФОРМАТ ОТОБРАЖЕНИЯ ПОСЛЕ НАЖАТИЯ ЛКМ:
     "clock": {
         // "timezone": "America/New_York",
-        "format": "  {:%H:%M}"
-        //"tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        //"format-alt": "{:%Y-%m-%d}"
+        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+        "interval": 60,
+        "format": "{:%I:%M}",
+        "max-length": 25
     },
-
-//ОТОБРАЖЕНИЕ ЗАГРУЖЕННОСТИ ПРОЦЕССОРА, ФОРМАТ И ВСПЛЫВАЮЩАЯ ПОДСКАЗКА:
     "cpu": {
-        "format": "  {usage}%",
-        "tooltip": false
+        "interval":1,
+        "format": "{icon0} {icon1} {icon2} {icon3}",
+        "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"]
     },
-
-//ОТОБРАЖЕНИЕ КОЛИЧЕСТВА ПОЖИРАЕМОЙ ПАМЯТИ:
     "memory": {
-        "format": "  {}%"
+        "format": "{}% "
     },
-
-//ОТОБРАЖЕНИЕ ИНФЫ С ТЕМПЕРАТУРНЫХ ДАТЧИКОВ, ТАКИХ МОДУЛЕЙ МОЖНО СДЕЛАТЬ НЕСКОЛЬКО И ВЫВЕСТИ НА ПАНЕЛЬ ВСЕ ДАТЧИКИ:
     "temperature": {
-	//ВЫБОР ДАТЧИКА, ПОСМОТРЕТЬ ДАТЧИКИ МОЖНО ТАК: ls /sys/class/thermal/
         // "thermal-zone": 2,
-	//ПУТЬ К ДЕРИКТОРИИ УСТРОЙСТВА, МОЖЕШЬ ПОШАРИТСЯ В /sys/class/hwmon/ И НАЙТИ НУЖНОЕ.
         // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-	//КРИТИЧЕСКИЙ ТЕМПЕРАТУРНЫЙ ПОРОГ, ПОСЛЕ ПРОХОЖДЕНИЯ КОТОРОГО WAYBAR ТЕБЕ НАМЕКНЕТ ЧТО ВСЕ ПЛОХО:
         "critical-threshold": 80,
-	//СОБСТВЕННО ФОРМАТ ВЫВОДА ИНВЫ О ТОМ ЧТО СКОРО ТВОЯ СИСТЕМА РЕСТАРТАНЕТ И СБРОСИТ ЧАСТОТЫ:
-        // "format-critical": "{temperatureC}°C {icon}",
-	//ФОРМАТ ВЫВОДА ТЕМПЕРАТУРЫ, ТЕМПЕРАТУРА, ГРАДУС, ИКОНКА.
-        "format": "{temperatureC}°C {icon}",
-	//ФОРМАТ ИКОНКИ ТЕМПЕРАТУРЫ, ВЫБИРАЕТСЯ В ЗАВИСИМОСТИ ОТ ТЕМПЕРАТУРЫ
-        "format-icons": ["", "", ""]
+        "format-critical": "{temperatureC}°C",
+        "format": ""
     },
-
-//ВЫВОД ЯРКОСТИ ДИСПЛЕЯ, ФОРМАТ ВЫВОДА И ФОРМАТ ИКОНКИ:
     "backlight": {
         // "device": "acpi_video1",
         "format": "{percent}% {icon}",
-        "format-icons": ["", ""]
+        "format-icons": ["", "", "", "", "", "", "", "", ""]
     },
-
-//РАСКЛАДКА КЛАВИАТУРЫ:
-	"river/language": {
-		"format": "  {}",
-		"tooltip": false
-	},
-
-//ВЫВОД ЗАРЯДА БАТАРЕИ, ТУТ САМ ПОЙМЕШЬ ЧТО К ЧЕМУ, ОДНИ ФОРМАТЫ ВЫВОДА:
     "battery": {
         "states": {
-            // "good": 95,
-            "warning": 30,
-            "critical": 15
+            "warning": 50,
+            "critical": 20
         },
-        "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
-        "format-plugged": "{capacity}% ",
-        "format-alt": "{time} {icon}",
+        "format": "{icon}",
+        "format-charging": "",
+        "format-plugged": "",
         // "format-good": "", // An empty format will hide the module
         // "format-full": "",
-        "format-icons": ["", "", "", "", ""]
+        "format-icons": ["", "", "", "", ""]
     },
-
-//АККУМУЛЯТОР ДЛЯ МОНИТОРА, ТОЛЬКО ЧТО УЗНАЛ ЧТО ТАКОЕ БЫВАЕТ, КОРОЧ ЯХЗ:
     "battery#bat2": {
         "bat": "BAT2"
     },
-
-//ВЫВОД ИНФОРМАЦИИ О СЕТЕВЫХ ПОДКЛЮЧЕНИЯХ, ВЫБОР ИНТЕРФЕЙСА И ФОРМАТЫ ВЫВОДА:
     "network": {
-        // "interface": "wlp2*",
-        "format-wifi": "{essid} ({signalStrength}%) ",
-        "format-ethernet": "{ifname}: {ipaddr}/{cidr} ",
-        "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
+        // "interface": "wlp2*", // (Optional) To force the use of this interface
+        "format-wifi": "",
+        "format-ethernet": "",
+        "tooltip-format": "via {gwaddr} {ifname}",
+        "format-linked": "",
+        "format-disconnected": "wifi",
+        "format-alt": "   "
     },
-
-//ВЫВОД УРОВНЯ ГРОМКОСТИ С ПУЛЬСАУДИО, КОЛИЧЕСТВО ПРОЦЕНТОВ ПРИ СКРОЛЛЕ, ФОРМАТЫ ВЫВОДА И ЧТО ЗАПУСТИТЬ ПРИ КЛИКЕ ЛКМ:
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
-        "format": "{icon} {volume}%",
+        "format": "{format_source}",
         "format-bluetooth": "{volume}% {icon} {format_source}",
         "format-bluetooth-muted": " {icon} {format_source}",
         "format-muted": " {format_source}",
-        "format-source": "{volume}% ",
-        "format-source-muted": "",
         "format-icons": {
-            "headphone": "",
-            "hands-free": "",
+            "headphone": "",
+            "hands-free": "",
             "headset": "",
             "phone": "",
             "portable": "",
@@ -201,58 +176,14 @@
         },
         "on-click": "pavucontrol"
     },
-
-//ОТОБРАЖЕНИЕ АКТИВНОГО ОКНА, ФОРМАТ, МАКСИМАЛЬНАЯ ДЛИНА, МИНИМАЛЬНАЯ ДЛИНА, ПОДЗКАЗКА ПРИ НАВЕДЕНИИ:
-        "river/window": {
-                "format": "{}",
-		"max-length": 20,
-		"min-length": 20,
-		"tooltip": false
-	},
-
-//ТАСКБАР, ФОРМАТ, РАЗМЕР ИКОНОК, ТЕМА, ПОДЗКАЗКА...:
-"wlr/taskbar": {
-    "format": "{icon}",
-    "icon-size": 14,
-    "icon-theme": "Papirus-Dark-Custom",
-    "tooltip-format": "{title}",
-    "on-click": "activate",
-    "on-click-middle": "close"
-},
-
-//ПОДКЛЮЧЕНИЕ ДОПОЛНИТЕЛЬНЫХ МОДУЛЕЙ, ПРЕЖДЕ ЧЕМ ЧТО-ТО ГОРОДИТЬ ПОМОТРИ КАКИЕ ЕСТЬ ТУТ: https://github.com/Alexays/Waybar/wiki/Module:-Custom
-    "custom/cmus": {
-        "format": "  {}",
-        //"max-length": 15,
-        "interval": 10,
-        "exec": "cmus-remote -C \"format_print '%a - %t'\"", // artist - title
-        "exec-if": "pgrep cmus",
-        "on-click": "cmus-remote -u",                        //toggle pause
-        "escape": true                                       //handle markup entities
-    }, //НА ВИКИ В МОДУЛЯХ НЕТ В МОДУЛЯХ ВОТ ЭТОЙ ЗАПЯТОЙ В КОНЦЕ, ЕСЛИ ЕЕ ТЕ БУДЕТ ТО WAYBAR НЕ ВЗЛЕТИТ!
-
-//ЭТО НУЖНО ДЛЯ ТОГО ЧТО БЫ СДЕЛАТЬ СТРЕЛОЧКИ НА ПАНЕЛИ:
-    "custom/left": {
-        "format": "",
-        "tooltip": false,
-    },
-
-    "custom/left2": {
-        "format": "",
-        "tooltip": false,
-    },
-
-    "custom/right": {
-        "format": "",
-        "tooltip": false,
-    },
-
-    "custom/right2": {
-        "format": "",
-        "tooltip": false,
-    },
-
-//ЧТО ТО НА ТЕХНИЧЕСКОМ, НЕ ТРОГАЙ ЭТО!
+    "custom/media": {
+        "format": "{icon} {}",
+        "return-type": "json",
+        "max-length": 40,
+        "format-icons": {
+            "spotify": "",
+            "default": "🎜"
+        },
         "escape": true,
         "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
         // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
