--- a/.config/qutebrowser/qsettings/QtProject.conf
+++ b/.config/qutebrowser/qsettings/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///home/gleb/.steam/steam/steamapps/common/Terraria/Content, file:///, file:///home/gleb/.local/share/Terraria/Worlds, file:///home/gleb/Downloads, file:///home/gleb, file:///home/gleb/stiytk/gleb/avatars
-lastVisited=file:///home/gleb/stiytk/gleb/avatars
+history=file:///home/gleb/Downloads, file:///home/gleb, file:///home/gleb/stiytk/gleb/avatars, file:///home/gleb/Project/fast_math/media/videos/0/2160p60, file:///home/gleb/Project/fast_math/media/images/media, file:///home/gleb/.sync/pw
+lastVisited=file:///home/gleb/.sync/pw
 qtVersion=5.15.7
 shortcuts=file:, file:///home/gleb
 sidebarWidth=90
