--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -44,12 +44,15 @@ decoration {
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
+    dim_inactive = 1
+    dim_strength = 0.6
 }
 
+---------------------------------------------------------------------------------------
+# АНИМАЦИЯ
+---------------------------------------------------------------------------------------
 animations {
     enabled = yes
-
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
