--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,181 +1,89 @@
 {
-    "layer": "top",
+    "layer": "top", // Waybar at top layer
     "position": "top",
-    "spacing": 5, // Gaps between modules (4px)
-    // Choose the order of the modules
-    // "margin-left":25,
-    // "margin-right":25,
-    "margin-bottom":-11,
-    //"margin-top":5,
+
+    "height": 35,
+    // "width": 1366,
+    "spacing": 10,
+
+
     "modules-left": ["wlr/workspaces"],
-    "modules-right": ["temperature","network","battery","custom/ss","custom/cycle_wall","custom/expand","cpu","clock"],
-    "modules-center": ["custom/dynamic_pill"],
-    // Modules configuration
+    "modules-center": ["custom/cmus"],
+    "modules-right": ["custom/weather", "tray", "custom/alsa", "hyprland/language", "custom/key", "clock"],
 
+"wlr/workspaces": {
+     "format": "{icon}",
+     "on-scroll-up": "hyprctl dispatch workspace e+1",
+     "on-scroll-down": "hyprctl dispatch workspace e-1",
+     "on-click": "activate",
+     "all-outputs": false,
+     "format": "{icon}",
+    },
 
-    // custom modules ////////////////
-    "custom/dynamic_pill": {
-        "return-type": "json",
-        // "format":"{}",
-        "exec": "~/.config/waybar/scripts/tools/start_dyn",
-        "escape":true
-    },
-    "custom/ss":{
-        "format":"{}",
-        "exec":"~/.config/waybar/scripts/tools/expand ss-icon",
-        "on-click": "~/.config/waybar/scripts/screenshot"
-    },
-    "custom/cycle_wall":{
-        "format":"{}",
-        "exec": "~/.config/waybar/scripts/tools/expand wall",
-        // "interval": 1,
-        "on-click": "~/.config/waybar/scripts/tools/expand cycle"
-    },
-    "custom/expand":{
-        "on-click":"~/.config/waybar/scripts/expand_toolbar",
-        "format":"{}",
-        "exec":"~/.config/waybar/scripts/tools/expand arrow-icon"
-    },
-    // "custom/waybar-mpris": {
-    //     "return-type": "json",
-    //     "exec": "echo '   '",
-    //     "on-click": "waybar-mpris --send toggle",
-    //     // This option will switch between players on right click.
-    //         "on-click-right": "waybar-mpris --send player-next",
-    //     // The options below will switch the selected player on scroll
-    //         // "on-scroll-up": "waybar-mpris --send player-next",
-    //         // "on-scroll-down": "waybar-mpris --send player-prev",
-    //     // The options below will go to next/previous track on scroll
-    //         // "on-scroll-up": "waybar-mpris --send next",
-    //         // "on-scroll-down": "waybar-mpris --send prev",
-    //     "escape": true
-    // },
-    //////////////////////////////////
-    "keyboard-state": {
-        "numlock": true,
-        "capslock": true,
-        "format": "{name} {icon}",
-        "format-icons": {
-            "locked": "",
-            "unlocked": ""
-        }
-    },
-    "wlr/workspaces": {
-        "format": "{icon}",
-        "format-active": " {icon} ",
-        "on-click": "activate",
-        "format-icons":{
-            "10":"10"
-        },
-    },
-    "sway/mode": {
+"sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
     },
-    "mpd": {
-        "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
-        "format-disconnected": "Disconnected ",
-        "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
-        "unknown-tag": "N/A",
-        "interval": 2,
-        "consume-icons": {
-            "on": " "
-        },
-        "random-icons": {
-            "off": "<span color=\"#f53c3c\"></span> ",
-            "on": " "
-        },
-        "repeat-icons": {
-            "on": " "
-        },
-        "single-icons": {
-            "on": "1 "
-        },
-        "state-icons": {
-            "paused": "",
-            "playing": ""
-        },
-        "tooltip-format": "MPD (connected)",
-        "tooltip-format-disconnected": "MPD (disconnected)"
+    
+"tray": {
+        "spacing": 10,
+        "icon-size": 15
     },
-    "idle_inhibitor": {
-        "format": "{icon}",
-        "format-icons": {
-            "activated": "",
-            "deactivated": ""
-        }
+    
+"clock": {
+        "format": "{:%H:%M}",
+        "format-alt": "{:%Y-%m-%d}"
     },
-    "tray": {
-        // "icon-size": 21,
-        "spacing": 10
+    
+"custom/cmus": {
+    "format": " {}",
+    "max-length": 45,
+    "interval": 10,
+    "exec": "cmus-remote -C \"format_print '%F'\"",
+    "exec-if": "pgrep cmus",
+    "on-click": "cmus-remote -u",
+    "on-scroll-up": "cmus-remote --next",
+    "on-scroll-down": "cmus-remote --prev",
+    "escape": true
+},
+
+"custom/weather": {
+    "format": "{}",
+    "exec": "~/.config/waybar/openweathermap-simple.sh",
+//    "exec": "curl 'https://wttr.in/?format=1'",
+    "interval": 3600
+},
+
+"custom/key": {
+    "format": "{}",
+    "exec": "~/.config/waybar/key.sh",
+    "interval": 600
+},
+
+"hyprland/window": {
+    "format": "{}",
+    "separate-outputs": false,
+    "max-length": 20
+},
+
+"hyprland/language": {
+    "format": "{}",
+    "format-us": "US",
+    "format-ru": "RU",
+    "keyboard-name": "AT Translated Set 2 keyboard"
+},
+
+"custom/alsa": {
+    "format": "  {}",
+//  "exec": "amixer get Master | sed -nre 's/.*\\[off\\].*/      \n\nmuted/p; s/.*\\[(.*%)\\].*/    \\1/p'",
+    "exec": "amixer get Master | awk -F'[][]' 'END{ print $2 }'",
+    "on-click": "amixer set Master toggle; pkill -x -RTMIN+11 waybar",
+    "on-scroll-up": "amixer set Master 1+; pkill -x -RTMIN+11 waybar",
+    "on-scroll-down": "amixer set Master 1-; pkill -x -RTMIN+11 waybar",
+    "signal": 11,
+    "interval": 10,
+    "tooltip": true
     },
-    "clock": {
-        // "timezone": "America/New_York",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "interval": 60,
-        "format": "{:%I:%M}",
-        "max-length": 25
-    },
-    "cpu": {
-        "interval":1,
-        "format": "{icon0} {icon1} {icon2} {icon3}",
-        "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"]
-    },
-    "memory": {
-        "format": "{}% "
-    },
-    "temperature": {
-        // "thermal-zone": 2,
-        // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-        "critical-threshold": 80,
-        "format-critical": "{temperatureC}°C",
-        "format": ""
-    },
-    "backlight": {
-        // "device": "acpi_video1",
-        "format": "{percent}% {icon}",
-        "format-icons": ["", "", "", "", "", "", "", "", ""]
-    },
-    "battery": {
-        "states": {
-            "warning": 50,
-            "critical": 20
-        },
-        "format": "{icon}",
-        "format-charging": "",
-        "format-plugged": "",
-        // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
-        "format-icons": ["", "", "", "", ""]
-    },
-    "battery#bat2": {
-        "bat": "BAT2"
-    },
-    "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "",
-        "format-ethernet": "",
-        "tooltip-format": "via {gwaddr} {ifname}",
-        "format-linked": "",
-        "format-disconnected": "wifi",
-        "format-alt": "   "
-    },
-    "pulseaudio": {
-        // "scroll-step": 1, // %, can be a float
-        "format": "{format_source}",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
-        "format-muted": " {format_source}",
-        "format-icons": {
-            "headphone": "",
-            "hands-free": "",
-            "headset": "",
-            "phone": "",
-            "portable": "",
-            "car": "",
-            "default": ["", "", ""]
-        },
-        "on-click": "pavucontrol"
-    },
+
     "custom/media": {
         "format": "{icon} {}",
         "return-type": "json",
@@ -184,8 +92,10 @@
             "spotify": "",
             "default": "🎜"
         },
+
         "escape": true,
         "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
         // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
     }
 }
+
