--- a/.config/hypr/otherland.conf
+++ b/.config/hypr/otherland.conf
@@ -21,12 +21,12 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 5
-    gaps_out = 15
+    gaps_in = 0
+    gaps_out = 0
 
     border_size = 0
     col.active_border = rgba(1affffee)
-    col.inactive_border = rgba(595959aa)
+    #col.inactive_border = rgba(595959aa)
 
     layout = dwindle
 }
@@ -34,25 +34,20 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 10
-    blur = yes
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = on
+    rounding = 0
+    blur = no
+    blur_size = 0
+    blur_passes = 0
+    blur_new_optimizations = off
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
-    dim_inactive = 1
-    dim_strength = 0.6
+    drop_shadow = no
 }
 
 ---------------------------------------------------------------------------------------
 # АНИМАЦИЯ
 ---------------------------------------------------------------------------------------
 animations {
-    enabled = yes
+    enabled = no
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
