--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -9,7 +9,7 @@
 
     "modules-left": ["wlr/workspaces"],
     "modules-center": ["custom/cmus"],
-    "modules-right": ["custom/weather", "tray", "custom/alsa", "hyprland/language", "custom/key", "clock"],
+    "modules-right": ["custom/weather", "tray", "custom/alsa", "custom/key", "custom/lang", "clock"],
 
 "wlr/workspaces": {
      "format": "{icon}",
@@ -18,6 +18,16 @@
      "on-click": "activate",
      "all-outputs": false,
      "format": "{icon}",
+    },
+
+"keyboard-state": {
+        "numlock": true,
+        "capslock": true,
+        "format": "{name} {icon}",
+        "format-icons": {
+            "locked": "",
+            "unlocked": ""
+        }
     },
 
 "sway/mode": {
@@ -45,6 +55,13 @@
     "on-scroll-down": "cmus-remote --prev",
     "escape": true
 },
+
+"custom/lang": {
+    "exec": "~/.config/waybar/kb_hypr",
+   "interval": 1,
+    "format": "{}",
+},
+
 
 "custom/weather": {
     "format": "{}",
