--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -100,6 +100,7 @@ bind = SUPERSHIFT, R, exec, hyprctl, reload,
 bind = SUPERSHIFT, space, togglefloating, 
 bind = SUPER, D, exec, rofi -show run
 bind = SUPER, X, exec, swaylock -e --image .walp/pixelmoon.png
+bind = SUPERSHIFT, X, exec, systemctl suspend | swaylock -e --image .walp/pixelmoon.png
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
