--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -31,6 +31,7 @@ settings:
     https://www.litres.ru: false
     https://www.reddit.com: true
     https://www.tinkoff.ru: true
+    https://www.youtube.com: true
   content.proxy:
     global: system
   content.register_protocol_handler:
