--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -3,25 +3,25 @@ font-bold=JetBrainsMono Nerd Font Mono:style=Bold:size=13
 font-italic=JetBrainsMono Nerd Font Mono:style=Italic:size=13
 font-bold=JetBrainsMono Nerd Font Mono:style=Bold Italic:size=13
 
-[colors]
-alpha=0.7
-background=2f343f
-foreground=f2f2f2
-
-regular0=2f343f
-regular1=ee4e4e
-regular2=2be491
-regular3=fa946e
-regular4=63c5ea
-regular5=cf8ef4
-regular6=89ccf7
-regular7=f2f2f2
-
-bright0=2f343f
-bright1=ee4e4e
-bright2=2be491
-bright3=fa946e
-bright4=63c5ea
-bright5=cf8ef4
-bright6=89ccf7
-bright7=f2f2f2
+#[colors]
+#alpha=1
+#background=2f343f
+#foreground=f2f2f2
+#
+#regular0=2f343f
+#regular1=ee4e4e
+#regular2=2be491
+#regular3=fa946e
+#regular4=63c5ea
+#regular5=cf8ef4
+#regular6=89ccf7
+#regular7=f2f2f2
+#
+#bright0=2f343f
+#bright1=ee4e4e
+#bright2=2be491
+#bright3=fa946e
+#bright4=63c5ea
+#bright5=cf8ef4
+#bright6=89ccf7
+#bright7=f2f2f2
