--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -35,10 +35,10 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 10
-    blur = yes
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = on
+    #blur = yes
+    #blur_size = 3
+    #blur_passes = 1
+    #blur_new_optimizations = 0
 
     drop_shadow = yes
     shadow_range = 4
@@ -48,9 +48,7 @@ decoration {
     dim_strength = 0.6
 }
 
----------------------------------------------------------------------------------------
 # АНИМАЦИЯ
----------------------------------------------------------------------------------------
 animations {
     enabled = yes
 
@@ -71,7 +69,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    #new_is_master = true
 }
 
 gestures {
@@ -81,9 +79,9 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic mouse V1 {
-    sensitivity = -0.5
-}
+#device:epic mouse V1 {
+#    sensitivity = -0.5
+#}
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
@@ -100,9 +98,11 @@ bind = SUPERSHIFT, R, exec, hyprctl, reload,
 bind = SUPERSHIFT, space, togglefloating, 
 bind = SUPER, D, exec, rofi -show run
 bind = SUPER, X, exec, swaylock -e --image .walp/pixelmoon.png
+bind = SUPERSHIFT, D, exec, mpv /home/gleb/Desktop/cllbs/videos/memes/distr.mkv
 bind = SUPERSHIFT, X, exec, systemctl suspend | swaylock -e --image .walp/pixelmoon.png
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = SUPERSHIFT, G, exec, grim ~/Project/presnt/sda/$(date +'%s_grim.png') # dwindle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
