--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,22 +1,21 @@
-foreground #c7c7c7
-background #303030
-
-color0 #000000
-color1 #c91b00
-color2 #b9ca4a
-color3 #e6c547
-color4 #7aa6da
-color5 #c397d8
-color6 #70c0ba
-color7 #ffffff
-color8 #666666
-color9 #ff6d67
-color10 #9ec400
-color11 #e7c547
-color12 #7aa6da
-color13 #b77ee0
-color14 #54ced6
-color15  #ffffff
+# foreground #c7c7c7
+# background #303030
+# color0 #000000
+# color1 #c91b00
+# color2 #b9ca4a
+# color3 #e6c547
+# color4 #7aa6da
+# color5 #c397d8
+# color6 #70c0ba
+# color7 #ffffff
+# color8 #666666
+# color9 #ff6d67
+# color10 #9ec400
+# color11 #e7c547
+# color12 #7aa6da
+# color13 #b77ee0
+# color14 #54ced6
+# color15  #ffffff
 
 font_family JetBrainsMono Nerd Font Mono
 copy_on_select clipboard
@@ -26,8 +25,7 @@ window_alert_on_bell yes
 
 tab_bar_style powerline
 map alt+t new_tab_with_cwd
-
-active_tab_background   #C678DD
+# active_tab_background   #C678DD
 window_border_width 0pt
 
 # vim:fileencoding=utf-8:foldmethod=marker
@@ -2112,3 +2110,9 @@ background_opacity 0.79
 
 #: }}}
 
+
+
+# BEGIN_KITTY_THEME
+# Catppuccin-Mocha
+include current-theme.conf
+# END_KITTY_THEME
