--- a/.config/qutebrowser/qsettings/QtProject.conf
+++ b/.config/qutebrowser/qsettings/QtProject.conf
@@ -1,8 +1,8 @@
 [FileDialog]
-history=file:///home/gleb/.walp, file:///home/gleb/Desktop, file:///home/gleb/Desktop/avas, file:///home/gleb/Desktop/pixart, file:///home/gleb/Downloads, file:///home/gleb/Project/fast_math/LaTeX
-lastVisited=file:///home/gleb/Project/fast_math/LaTeX
-qtVersion=5.15.8
+history=file:///home/tau/Downloads/Telegram Desktop, file:///home/tau/Downloads, file:///home/tau/Desktop/cllbs/muha/avs, file:///home/tau/.wine/drive_c/Program Files (x86)/Katawa Shoujo/game, file:///home/tau/Desktop/cllbs/avas
+lastVisited=file:///home/tau/Desktop/cllbs/avas
+qtVersion=6.8.1
 shortcuts=file:, file:///home/gleb
 sidebarWidth=90
-treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xec\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xff\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
+treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x3\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xec\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xff\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff\0\0\0\0)
 viewMode=Detail
